# faas-imp-public

./: README.md  main.py  pyproject.toml
.pytest_cache/: .gitignore
mycalc/: __init__.py  advanced.py
test/: test.py
