[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycalc"
version = "0.1.0"
description = "A simple local math calculation library"
authors = [
  { name = "Rumman", email = "rummanmo1999@gmail.com" }
]
license = { text = "MIT" }
dependencies = []
